--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="txt_waktu">Waktu</string>
     <string name="txt_judul">judul</string>
     <string name="txt_please_wait">Please Wait</string>
+    <string name="search">Search</string>
+    <string name="Id_sapi">ID Sapi</string>
 </resources>
