--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Shetpi</string>
-    <string name="txt_suhu">Suhu</string>
-    <string name="txt_detak_jantung">Detak Jantung</string>
+    <string name="txt_suhu">Suhu                    :</string>
+    <string name="txt_detak_jantung">Detak Jantung  :</string>
     <string name="txt_waktu">Waktu</string>
     <string name="txt_judul">judul</string>
     <string name="txt_please_wait">Please Wait</string>
     <string name="search">Search</string>
     <string name="Id_sapi">ID Sapi</string>
+    <string name="txt_tanggal">Tanggal</string>
+    <string name="txt_berat">Berat                  :</string>
+    <string name="data_tidak_tersedia">Data Tidak Tersedia</string>
 </resources>
